force-app/main/default/objects/IntegratedEnquiry__c/IntegratedEnquiry__c.object-meta.xml
<CustomObject>
    <label>Integrated Enquiry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integrated Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>