force-app/main/default/objects/IntegratedEnquiry__c/fields/CCApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>CCApprovedRejectedBy__c</fullName>
    <label>CC_Approved / Rejected By</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>