force-app/main/default/objects/IntegratedEnquiry__c/fields/Chamber__c.field-meta.xml
<CustomField>
    <fullName>Chamber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By Chamber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrated Enquiries (Referred By Chamber)</relationshipLabel>
    <relationshipName>Integrated_Enquiries5</relationshipName>
    <type>Lookup</type>
</CustomField>