force-app/main/default/objects/IntegratedEnquiry__c/fields/Chamber_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Chamber_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chamber Contacts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integrated Enquiries (Chamber Contact)</relationshipLabel>
    <relationshipName>Integrated_Enquiries3</relationshipName>
    <type>Lookup</type>
</CustomField>