force-app/main/default/objects/IntegratedEnquiry__c/fields/Child_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>Child_Enquiries__c</fullName>
    <label>Child Enquiries</label>
    <type>TextArea</type>
</CustomField>