force-app/main/default/objects/IntegratedEnquiry__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrated Enquiries</relationshipLabel>
    <relationshipName>ClientandEnquiryRelations</relationshipName>
    <type>Lookup</type>
</CustomField>