force-app/main/default/objects/IntegratedEnquiry__c/fields/ClientBackground__c.field-meta.xml
<CustomField>
    <fullName>ClientBackground__c</fullName>
    <label>Client Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>