force-app/main/default/objects/IntegratedEnquiry__c/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrated Enquiries (Client Name)</relationshipLabel>
    <relationshipName>Integrated_Enquiries3</relationshipName>
    <type>Lookup</type>
</CustomField>