force-app/main/default/objects/IntegratedEnquiry__c/fields/CMSpoc__c.field-meta.xml
<CustomField>
    <fullName>CMSpoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;M SPOC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integrated_Enquiries2</relationshipName>
    <type>Lookup</type>
</CustomField>