force-app/main/default/objects/IntegratedEnquiry__c/fields/COCSL__c.field-meta.xml
<CustomField>
    <fullName>COCSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CO-CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integrated_Enquiries3</relationshipName>
    <type>Lookup</type>
</CustomField>