force-app/main/default/objects/IntegratedEnquiry__c/fields/CompanyHQ__c.field-meta.xml
<CustomField>
    <fullName>CompanyHQ__c</fullName>
    <label>Company HQ</label>
    <type>Address</type>
</CustomField>