force-app/main/default/objects/IntegratedEnquiry__c/fields/CreatedByScanToSalesforce__c.field-meta.xml
<CustomField>
    <fullName>CreatedByScanToSalesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Scan to Salesforce</label>
    <type>Checkbox</type>
</CustomField>