force-app/main/default/objects/IntegratedEnquiry__c/fields/CrossSell__c.field-meta.xml
<CustomField>
    <fullName>CrossSell__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cross Sell</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integrated_Enquiries4</relationshipName>
    <type>Lookup</type>
</CustomField>