force-app/main/default/objects/IntegratedEnquiry__c/fields/CSL__c.field-meta.xml
<CustomField>
    <fullName>CSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integrated_Enquiries5</relationshipName>
    <type>Lookup</type>
</CustomField>