force-app/main/default/objects/IntegratedEnquiry__c/fields/DetailsOfSupport__c.field-meta.xml
<CustomField>
    <fullName>DetailsOfSupport__c</fullName>
    <label>DetailsOfSupport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>