force-app/main/default/objects/IntegratedEnquiry__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Integrated Enquiries</relationshipLabel>
    <relationshipName>ClientandEnquiryRelations</relationshipName>
    <type>Lookup</type>
</CustomField>