force-app/main/default/objects/IntegratedEnquiry__c/fields/Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>Existing_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrated Enquiries (Existing Client)</relationshipLabel>
    <relationshipName>Integrated_Enquiries2</relationshipName>
    <type>Lookup</type>
</CustomField>