force-app/main/default/objects/IntegratedEnquiry__c/fields/ExpertiesForDuplicateRule__c.field-meta.xml
<CustomField>
    <fullName>ExpertiesForDuplicateRule__c</fullName>
    <label>ExpertiesForDuplicateRule</label>
    <type>TextArea</type>
</CustomField>