force-app/main/default/objects/IntegratedEnquiry__c/fields/GT_Firm_Personnel__c.field-meta.xml
<CustomField>
    <fullName>GT_Firm_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GT Firm Personnel</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integrated_Enquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>