force-app/main/default/objects/IntegratedEnquiry__c/fields/GTMemberFirms__c.field-meta.xml
<CustomField>
    <fullName>GTMemberFirms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GT Member Firms</label>
    <referenceTo>InboundReferral__c</referenceTo>
    <relationshipLabel>Integrated Enquiries</relationshipLabel>
    <relationshipName>Integrated_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>