force-app/main/default/objects/IntegratedEnquiry__c/fields/HeadQuarters__c.field-meta.xml
<CustomField>
    <fullName>HeadQuarters__c</fullName>
    <label>HeadQuarters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>