force-app/main/default/objects/IntegratedEnquiry__c/fields/Introduction_of_Background__c.field-meta.xml
<CustomField>
    <fullName>Introduction_of_Background__c</fullName>
    <label>Introduction and Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>