force-app/main/default/objects/IntegratedEnquiry__c/fields/Investors_Private_Equity_Firms__c.field-meta.xml
<CustomField>
    <fullName>Investors_Private_Equity_Firms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investors / Private Equity Firms</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrated Enquiries (Investors / Private Equity Firms)</relationshipLabel>
    <relationshipName>Integrated_Enquiries4</relationshipName>
    <type>Lookup</type>
</CustomField>