force-app/main/default/objects/IntegratedEnquiry__c/fields/Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrated Enquiries (Law Firm)</relationshipLabel>
    <relationshipName>Integrated_Enquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>