force-app/main/default/objects/IntegratedEnquiry__c/fields/Lead_member_firm__c.field-meta.xml
<CustomField>
    <fullName>Lead_member_firm__c</fullName>
    <label>Lead member firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Antigua and St Kitts &amp; Nevis</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Belarus</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Bosnia and Herzegovina</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>British Virgin Islands</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
            </value>
            <value>
                <fullName>Cambodia</fullName>
            </value>
            <value>
                <fullName>Cameroon</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Cayman Islands</fullName>
            </value>
            <value>
                <fullName>Channel Islands</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>China &amp; Hong Kong</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Côte d’Ivoire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>