force-app/main/default/objects/IntegratedEnquiry__c/fields/LeadMemberFirm__c.field-meta.xml
<CustomField>
    <fullName>LeadMemberFirm__c</fullName>
    <label>LeadMemberFirm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>