force-app/main/default/objects/IntegratedEnquiry__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Chat Bot</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>