force-app/main/default/objects/IntegratedEnquiry__c/fields/Legal_entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_entity__c</fullName>
    <label>Legal entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant Thornton Advisory Private Limited</fullName>
            </value>
            <value>
                <fullName>Grant Thornton Bharat LLP</fullName>
            </value>
            <value>
                <fullName>GT Restructuring Services LLP</fullName>
            </value>
            <value>
                <fullName>GT Valuation Advisors LLP</fullName>
            </value>
            <value>
                <fullName>Walker Chandiok &amp; Associates</fullName>
            </value>
            <value>
                <fullName>Walker Chandiok &amp; Co LLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>