force-app/main/default/objects/IntegratedEnquiry__c/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <label>LegalEntity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>