force-app/main/default/objects/IntegratedEnquiry__c/fields/Level_of_support__c.field-meta.xml
<CustomField>
    <fullName>Level_of_support__c</fullName>
    <label>Level of support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Branding View</fullName>
            </value>
            <value>
                <fullName>Content View</fullName>
            </value>
            <value>
                <fullName>Build document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>