force-app/main/default/objects/IntegratedEnquiry__c/fields/LevelOfSupport__c.field-meta.xml
<CustomField>
    <fullName>LevelOfSupport__c</fullName>
    <label>LevelOfSupport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>