force-app/main/default/objects/IntegratedEnquiry__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>TextArea</type>
</CustomField>