force-app/main/default/objects/IntegratedEnquiry__c/fields/MTBU__c.field-meta.xml
<CustomField>
    <fullName>MTBU__c</fullName>
    <label>MTBU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>