force-app/main/default/objects/IntegratedEnquiry__c/fields/NewClientOwner__c.field-meta.xml
<CustomField>
    <fullName>NewClientOwner__c</fullName>
    <label>New Client Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>