force-app/main/default/objects/IntegratedEnquiry__c/fields/NSLApprovalRejectionRecommendation__c.field-meta.xml
<CustomField>
    <fullName>NSLApprovalRejectionRecommendation__c</fullName>
    <label>NSL Approval / Rejection Recommendation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>