force-app/main/default/objects/IntegratedEnquiry__c/fields/NSLApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>NSLApprovalStatus__c</fullName>
    <label>NSL Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>