force-app/main/default/objects/IntegratedEnquiry__c/fields/NSLApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>NSLApprovedRejectedBy__c</fullName>
    <label>NSL Approved / Rejected By</label>
    <length>3276</length>
    <type>LongTextArea</type>
</CustomField>