force-app/main/default/objects/IntegratedEnquiry__c/fields/NumberOEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberOEmployees__c</fullName>
    <label>No. of Employees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>