force-app/main/default/objects/IntegratedEnquiry__c/fields/Pardot_First_Activity__c.field-meta.xml
<CustomField>
    <fullName>Pardot_First_Activity__c</fullName>
    <label>Pardot First Activity</label>
    <type>DateTime</type>
</CustomField>