force-app/main/default/objects/IntegratedEnquiry__c/fields/PardotCampaign__c.field-meta.xml
<CustomField>
    <fullName>PardotCampaign__c</fullName>
    <label>Pardot Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>