force-app/main/default/objects/IntegratedEnquiry__c/fields/PardotConversionDate__c.field-meta.xml
<CustomField>
    <fullName>PardotConversionDate__c</fullName>
    <label>Pardot Conversion Date</label>
    <type>DateTime</type>
</CustomField>