force-app/main/default/objects/IntegratedEnquiry__c/fields/PardotCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>PardotCreatedDate__c</fullName>
    <label>Pardot Created Date</label>
    <type>DateTime</type>
</CustomField>