force-app/main/default/objects/IntegratedEnquiry__c/fields/PardotGrade__c.field-meta.xml
<CustomField>
    <fullName>PardotGrade__c</fullName>
    <label>Pardot Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>