force-app/main/default/objects/IntegratedEnquiry__c/fields/PardotLastActivity__c.field-meta.xml
<CustomField>
    <fullName>PardotLastActivity__c</fullName>
    <label>Pardot Last Activity</label>
    <type>DateTime</type>
</CustomField>