force-app/main/default/objects/IntegratedEnquiry__c/fields/PardotLastScoredAt__c.field-meta.xml
<CustomField>
    <fullName>PardotLastScoredAt__c</fullName>
    <label>Pardot Last Scored At</label>
    <type>DateTime</type>
</CustomField>