force-app/main/default/objects/IntegratedEnquiry__c/fields/PE_VC_Client__c.field-meta.xml
<CustomField>
    <fullName>PE_VC_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PE/VC Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrated Enquiries (PE/VC Client)</relationshipLabel>
    <relationshipName>Integrated_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>