force-app/main/default/objects/IntegratedEnquiry__c/fields/PE_VC_Contact__c.field-meta.xml
<CustomField>
    <fullName>PE_VC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PE/VC Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integrated Enquiries (PE/VC Contact)</relationshipLabel>
    <relationshipName>Integrated_Enquiries4</relationshipName>
    <type>Lookup</type>
</CustomField>