force-app/main/default/objects/IntegratedEnquiry__c/fields/ProbabilityOfWinning__c.field-meta.xml
<CustomField>
    <fullName>ProbabilityOfWinning__c</fullName>
    <label>Probability Of Winning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>