force-app/main/default/objects/IntegratedEnquiry__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Created for Proposal/Pitch Presentation Creation</description>
    <label>Project Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>