force-app/main/default/objects/IntegratedEnquiry__c/fields/Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Status__c</fullName>
    <label>Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Creative_Hub_Status</valueSetName>
    </valueSet>
</CustomField>