force-app/main/default/objects/IntegratedEnquiry__c/fields/Proposal_value__c.field-meta.xml
<CustomField>
    <fullName>Proposal_value__c</fullName>
    <label>Proposal value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>