force-app/main/default/objects/IntegratedEnquiry__c/fields/ProposalValue__c.field-meta.xml
<CustomField>
    <fullName>ProposalValue__c</fullName>
    <label>ProposalValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>