force-app/main/default/objects/IntegratedEnquiry__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>